// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchInput render 1`] = `
<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-owns="result-list"
  className="search-field"
  role="combobox"
>
  <Svg
    name="magnifying-glass"
  />
  <input
    aria-activedescendant=""
    aria-autocomplete="list"
    aria-controls="result-list"
    className=""
    placeholder="A placeholder"
    spellCheck={false}
    value=""
  />
  <div
    className="summary"
  >
    So many results
  </div>
  <CloseButton
    buttonClass=""
  />
</div>
`;

exports[`SearchInput show nav buttons 1`] = `
<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-owns="result-list"
  className="search-field"
  role="combobox"
>
  <Svg
    name="magnifying-glass"
  />
  <input
    aria-activedescendant=""
    aria-autocomplete="list"
    aria-controls="result-list"
    className=""
    placeholder="A placeholder"
    spellCheck={false}
    value="test"
  />
  <div
    className="summary"
  >
    So many results
  </div>
  <div
    className="search-nav-buttons"
  >
    <button
      className="nav-btn next"
      key="arrow-down"
      onClick={[Function]}
      title="Next result"
      type="arrow-down"
    >
      <Svg
        name="arrow-down"
      />
    </button>
    <button
      className="nav-btn prev"
      key="arrow-up"
      onClick={[Function]}
      title="Previous result"
      type="arrow-up"
    >
      <Svg
        name="arrow-up"
      />
    </button>
  </div>
  <CloseButton
    buttonClass=""
  />
</div>
`;

exports[`SearchInput show svg (emoji) 1`] = `
<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-owns="result-list"
  className="search-field"
  role="combobox"
>
  <Svg
    name="sad-face"
  />
  <input
    aria-activedescendant=""
    aria-autocomplete="list"
    aria-controls="result-list"
    className="empty"
    placeholder="A placeholder"
    spellCheck={false}
    value="test"
  />
  <div
    className="summary"
  >
    So many results
  </div>
  <CloseButton
    buttonClass=""
  />
</div>
`;

exports[`SearchInput show svg magnifying glass 1`] = `
<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-owns="result-list"
  className="search-field"
  role="combobox"
>
  <Svg
    name="magnifying-glass"
  />
  <input
    aria-activedescendant=""
    aria-autocomplete="list"
    aria-controls="result-list"
    className=""
    placeholder="A placeholder"
    spellCheck={false}
    value="test"
  />
  <div
    className="summary"
  >
    So many results
  </div>
  <CloseButton
    buttonClass=""
  />
</div>
`;
